css/style.css
:root {
  --color-primary-1: #8ecae6ff;
  --color-primary-2: #2f63ff;
  --color-primary-3: #085074;
  --color-primary-3: #333f46;
  --color-secondary-1: #ffb703ff;
  --color-secondary-2: #fb8500ff;

  --color-linear-gradient-1: #3fffdc;
  --color-linear-gradient-2: #2f63ff;
  --color-linear-gradient-3: #7277ff;
}

*,
::before,
::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  border: 0;
}

html {
  font-size: 62.5%;
  font-family: "Manrope", sans-serif;
}

body {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  background-color: var(--color-primary-1);
}

.container {
  width: 100%;

  /* border: 1px solid red; */
  padding: 0 5%;
  display: flex;
  align-items: center;
  justify-content: center;
  animation: page-load 1s backwards;
}

.app {
  background-color: #fff;
  background-image: linear-gradient(-33deg, #3fffdc15 0%, #ffffff10 50%, #7277ff15 75%, #8ecae650 100%);
  width: 100%;
  height: min-content;
  /* max-height: 60vh; */
  max-width: 70rem;
  border-radius: 2rem;
  box-shadow: 0 2rem 6rem #02304720;
  padding: 2rem;
  position: relative;
  /* transition: all 1s; */
  display: flex;
  align-items: center;
  flex-direction: column;
  overflow: hidden;
}

.bg-logo {
  position: absolute;
  width: 50%;
  height: auto;
  bottom: -5rem;
  left: -10rem;
  filter: blur(95px);
}

/* !----buttons---------------------- */

.btn {
  display: flex;
  align-items: center;
  justify-content: center;
  /* gap: 1rem; */
  padding: 1rem;
  border: none;
  border-radius: 1rem;
  font-size: 1.6rem;
  cursor: pointer;
  transition: all 0.2s;
  z-index: 10;
}

.btn:hover {
  filter: brightness(105%);
}

.btn--primary {
  background-color: #499eec;
  color: #fff;
  gap: 1rem;
}

.btn--secondary {
  background-color: #9ad9f7;
  color: #023047ff;
}

.bi {
  font-size: 2.1rem;
}

/*! logo Container----------------------------- */
.logo-container {
  /* border: 1px solid red; */
  position: absolute;
  top: -5rem;
  left: -0%;
  display: flex;
  align-items: center;
  justify-content: stretch;
  overflow: hidden;
  width: 7.6rem;
  height: auto;
  border-radius: 1rem;
  user-select: none;
  transition: all 1s;
  animation: page-load 1s backwards;
}

.logo-container:hover {
}

.logo-container:hover img {
  transform: translateX(-100%);
}
.logo-container:hover p {
  transform: translateX(-100%);
}

.logo {
  width: 7.6rem;
  height: auto;
  transition: all 0.2s 0.2s;
}

.madeByMe {
  font-size: 1.2rem;
  font-weight: 600;
  color: #fff;
  transition: all 0.2s 0.2s;
  font-family: "Courier New", Courier, monospace;
}

.madeByMe span {
  font-weight: 900;
  color: var(--color-primary-3);
}

/*! Search Box section-----------*/

.search-box {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  /* gap: 1rem; */
  height: min-content;
  width: 100%;
  z-index: 10;
  /* margin-bottom: 1rem; */
}

.search-box i {
  color: #666;
  padding: 1rem;
  font-size: 2.8rem;
}

.search-box__input {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: start;
  padding: 2rem;
  border-radius: 1rem;
  width: 100%;
  max-width: 60rem;
  outline: none;
  transition: all 0.2s;
  font-size: 1.8rem;
  color: #444;
  backdrop-filter: blur(10px);
  background-color: #ffffff90;
}
.search-box__input:focus {
  background-color: #2f63ff10;
}

.search-box__input::placeholder {
  color: #bbb;
}

.search-box__btn {
  background-color: transparent;
  color: #666;
  font-size: 2.8rem;
}

/* !city name section  */
.city-name {
  font-size: 2.8rem;
  font-weight: 600;
  color: #666;
  /* width: 100%; */
  padding: 1rem;
  display: none;
  /* border: 1px solid red; */
  width: 100%;
  margin-top: 1rem;
}

/*! Not Found section  */

.not-found {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  /* scale: 0;
  opacity: 0; */
  display: none;
  z-index: 10;
  margin-bottom: 2rem;
}

.not-found__img {
  width: 20rem;
  max-width: 60%;
  height: auto;
}

.not-found p {
  font-size: 2.1rem;
  color: #444;
  font-weight: 600;
}

/* !weather section ---------- */
.weather-box {
  display: flex;
  align-items: center;
  justify-content: center;
  height: min-content;
  flex-direction: column;
  /* padding-right: 5%; */
  position: relative;
  align-self: center;
  transform: translateY(-4rem);
  /* border: 1px solid red; */
  z-index: 10;
}

.weather-box img {
  width: 35vw;
  max-width: 22rem;

  height: 100%;
}

.weather-box__temperature {
  font-size: 12rem;
  line-height: 1;
  font-weight: 900;
  background: -webkit-linear-gradient(-120deg, #085074 25%, transparent 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  text-shadow: 0.3rem 0.3rem 1rem #00000025;
  transition: all 0.2s;
  z-index: 10;
  transform: translateY(-4rem);
}

.weather-box__description {
  font-size: 2.1rem;
  font-weight: 600;
  color: #085074;
  text-transform: capitalize;
  transform: translateY(-4rem);
}

.weather-box__info {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

/* !weather detail ---------- */

.weather-detail {
  width: 100%;
  padding: 1rem;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  gap: 2rem;
  border-radius: 2rem;
  box-shadow: 0 1rem 3rem #00000025;
  padding: 2rem;
  border-top: 2px solid #ffffff70;
  border-left: 2px solid #ffffff70;
  background-color: #ffffff90;
  backdrop-filter: blur(10px);
  z-index: 10;
}

.weather-detail p {
  font-size: 1.6rem;
  z-index: 10;
}
/* -------------------- */
.weather-detail .humidity {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  z-index: 10;
}

.weather-detail .humidity i {
  font-size: 2.4rem;
  color: var(--color-primary-3);
  opacity: 75%;
  z-index: 10;
}

.weather-detail span {
  font-size: 3.2rem;
  color: var(--color-primary-3);
  font-weight: 600;
}

.kmh {
  font-weight: 600;
  margin-left: 0.5rem;
  font-size: 1.6rem !important;
  opacity: 50%;
  z-index: 10;
}

.centigrade {
  font-size: 2.4rem;
  color: var(--color-primary-3);
}

.percentage {
  font-weight: 600;
  margin-left: 0.5rem;
  font-size: 1.6rem !important;
  opacity: 50%;
}

.humidity__text,
.wind__text {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: column;
}

/* ---------------------- */

.weather-detail .wind {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.weather-detail .wind i {
  font-size: 2.4rem;
  color: var(--color-primary-3);
  opacity: 75%;
}

/* !  weather details HIGH AND LOW */
.high-low {
  display: flex;
  gap: 4rem;
  justify-content: center;
  align-items: center;
}

.high-low .high {
  display: flex;
  gap: 1rem;
  align-items: center;
  justify-content: center;
  flex-flow: column;
  color: var(--color-secondary-2);
}

.high-low .low {
  display: flex;
  gap: 1rem;
  align-items: center;
  justify-content: center;
  flex-flow: column;
  color: var(--color-primary-2);
}

.high-low p {
  font-size: 2.1rem;
  color: var(--color-primary-3);
}

.high-low i {
  font-size: 2.4rem;
}
/* --------------------- */
.weather-box,
.weather-detail {
  /* margin-top: 2rem; */
  /* opacity: 0;
  scale: 0; */
  display: none;
}

.display-on {
  display: flex;
}

/* !animation  */

.fade-in {
  animation: fade-in 1s backwards;
}

@keyframes fade-in {
  to {
    opacity: 1;
    scale: 1;
  }
}

@keyframes page-load {
  from {
    opacity: 0;
    transform: translateY(100%);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

